refactor: remove various warnings
There are now *less* bugs than before, if that is even possible.

More bugs may have been introduced, but they are not known at this time.
Therefore they do not exist ... yet.